vehicle/tests/golden/error/scoping/recordFieldMissing/spec.vcl
record Test where
  { f1 : Real
  , f2 : Real
  }

example : Test
example = { f1 = 2 }
